# django-drf-auth-flow

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
connections/: models.py  serializers.py  urls.py  views.py
connections/migrations/: 0001_initial.py
notifications/: models.py  serializers.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
spices_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
